<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shelf</string>
    <string name="title_activity_main">Main</string>
    <string name="mercados">Mercados</string>
    <string name="pedidos">Meus Pedidos</string>
    <string name="Perfil">Perfil</string>
    <string name="carregando_horas_entrega">Carregando horas de entrega…</string>
    <string name="toque_novamente">Toque novamente para confirmar</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="enviando_informacao_compra">Enviando informações da compra</string>
    <string name="compra_finalizada">Compra finalizada</string>
    <string name="fechar_carrinho">Fechar Carrinho</string>
    <string name="sem_troco">Sem troco!</string>
    <string name="nao_saia_do_app_enquanto_finalizamos_sua_compra">Não saia do app enquanto finalizamos a sua compra</string>
    <string name="esgotado">ESGOTADO</string>
    <string name="o_mercado_nao_tem_estoque_para_a_quantidade_solicitada">O mercado não tem em estoque a quantidade solicitada</string>
    <string name="preco_mudou_compre_novamente">O preço mudou, compre novamente</string>
    <string name="incluindo_dados_pessoais">Incluindo dados pessoais</string>
    <string name="incluindo_endereco">Incluindo endereço</string>
    <string name="concluindo_cadastro">Concluindo cadastro</string>
    <string name="cadastro_concluido">Cadastro concluído</string>
    <string name="nao_saia_do_app_enquanto_concluimos_cadastro">Não saia do app enquanto concluimos o cadastro</string>
    <string name="entrar_no_shelf">Entrar no Shelf</string>
    <string name="nenhum_produto_encontrado">Nenhum produto encontrado :(</string>
    <string name="aberto">Aberto</string>
    <string name="dinheiro_zero">R$ 0,00</string>
    <string name="fechado">Fechado</string>
    <string name="nenhum_produto_encontrado_nesta_categoria">Nenhum produto encontrado nesta categoria :(</string>
    <string name="algum_erro_ocorreu_tente_novemente">Algum erro ocorreu. Tente Novamente!</string>
    <string name="sair">Sair</string>
    <string name="voce_esta_desconectado_logue_novamente">Você está desconectado, Logue novamente!</string>
    <string name="novo_endereco">Novo endereço</string>
    <string name="endereco_salvo">Usar enderço salvo</string>
    <string name="agendar_entrega_para_hoje_das">Agendar entrega para hoje das</string>
    <string name="voc_chegou_tarde_nao_temos_mais_horarios_de_entrega_essa_hora">Você chegou tarde ): \n Não temos mais horarios de entrega essa hora</string>
    <string name="produtos_no_carrinho">Produtos no carrinho</string>
    <string name="adionar_mais_produtos">Adionar mais produtos</string>
    <string name="subtotal">Subtotal:</string>
    <string name="taxa">Taxa:</string>
    <string name="total">TOTAL:</string>
    <string name="entrar_em_contato_comigo">Entrar em contato comigo</string>
    <string name="cancelar_item">Cancelar item</string>
    <string name="forma_de_pagamento">Forma de pagamento</string>
    <string name="o_pagamento_ser_feito_no_momento_da_entrega" tools:ignore="Typos">*O pagamento será feito no momento da entrega</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="troco_para">Troco para</string>
    <string name="pix">PIX</string>
    <string name="doc_ou_ted">DOC ou TED</string>
    <string name="cartao_de_debito">Cartão de débito</string>
    <string name="cartao_de_credito">Cartão de crédito</string>
    <string name="cheque">Cheque</string>
    <string name="nota">Nota</string>
    <string name="falta_pouco_precisamos_de_mais_alguns_dados">Falta pouco, só precisamos de mais alguns dados!</string>
    <string name="seus_dados_pessoais">Seus dados pessoais</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="rua_avenida">Rua/Avenida</string>
    <string name="quadra">Quadra</string>
    <string name="lote">Lote</string>
    <string name="numero">Número</string>
    <string name="informacao_adicional">Informação adicional</string>
    <string name="concluir_cadastro">Concluir cadastro</string>
    <string name="sobre_a_compra">Sobre a compra</string>
    <string name="detalhes_da_compra">Detalhes da compra</string>
    <string name="dados_do_mercado">Dados do Mercado</string>
    <string name="detalhes_do_mercado">Detalhes do mercado</string>
    <string name="whatsapp_do_estabelecimento">WhatsApp do estabelecimento</string>
    <string name="endereco_de_entrega">Endereço de entrega</string>
    <string name="endereco">Endereço</string>
    <string name="na_falta_de_um_item">Na falta de um item</string>
    <string name="hora_da_entrega">Hora da entrega</string>
    <string name="lista_de_compras">Lista de compras</string>
    <string name="estalecimento">Estalecimento</string>
    <string name="categorias">Categorias</string>
    <string name="todos">TODOS</string>
    <string name="categoria_feira">Categoria Feira</string>
    <string name="categoria_lipeza">Categoria: Lipeza</string>
    <string name="limpeza">Limpeza</string>
    <string name="categoria_alimentos_basicos">Categoria: Alimentos Básicos</string>
    <string name="categoria_bebidas">Categoria: bebidas</string>
    <string name="bebidas">Bebidas</string>
    <string name="categoria_bebidas_alcoolicas">Categoria: Bebidas Alcoólicas</string>
    <string name="categoria_salgadinhos_e_biscoitos">Categoria: Salgadinhos e biscoitos</string>
    <string name="categoria_cuidados_pessoais">Categoria: Cuidados Pessoais</string>
    <string name="categoria_doces_e_sobremesas">Categoria: doces e sobremesas</string>
    <string name="carregar_mais">Carregar mais</string>
    <string name="produtos">Produtos</string>
    <string name="ver_carrinho">Ver carrinho</string>
    <string name="total_de_itens_no_carrinho">Total de itens no carrinho</string>
    <string name="logo_shelf">Logo: Shelf</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_uma_conta">CRIAR UMA CONTA</string>
    <string name="voce_nao_fez_nenhuma_compra_ainda_quando_fizer_elas_aparecerao_aqui">Você não fez nenhuma compra ainda, quando fizer elas aparecerão aqui :)</string>
    <string name="sao_mostradas_as_30_compras_mais_recentes">*São mostradas as 30 compras mais recentes</string>
    <string name="nenhum_estabelecimento_encontrado">Nenhum estabelecimento encontrado!</string>
    <string name="seu_perfil">Seu perfil</string>
    <string name="editar_dados_pessoais">Editar dados pessoais</string>
    <string name="meu_endereco">Meu endereço</string>
    <string name="detalhes_do_endereco">Detalhes do endereço</string>
    <string name="editar_meu_endereco">Editar meu endereço</string>
    <string name="atencao">Atenção</string>
    <string name="ok">OK</string>
    <string name="nova_versao_disponivel_atualize_para_acessar">Nova versão disponível, atualize para acessar!</string>
    <string name="atualizar">Atualizar</string>
    <string name="verifique_o_seu_e_mail">Verifique o seu e-mail</string>
    <string name="aguarde_alguns_instantes_para_enviar_outro_email">Aguarde alguns instantes para enviar outro email</string>
    <string name="reenviar_link">Reenviar link</string>
    <string name="criando_conta">Criando conta</string>
    <string name="vamos_criar_sua_conta">Vamos criar sua Conta</string>
    <string name="criar_conta">Criar conta</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="cep">CEP</string>
    <string name="produtos_em_falta">Produtos em falta</string>
    <string name="momentos_antes_de_finalizarmos_sua_compra_estes_produtos_foram_adquiridos_por_outros_usuarios">Momentos antes de finalizarmos sua compra estes produtos foram adquiridos por outros usuários</string>
    <string name="enviando_email">Enviando email</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="e_mail_cadastrado">E-mail cadastrado</string>
    <string name="enviar_email_de_recupera_o">Enviar email de recuperação</string>
    <string name="atualizacao_dos_termos_de_uso_e_politica_de_privacidade">Atualização dos Termos de Uso e Política de Privacidade</string>
    <string name="discordar">Discordar</string>
    <string name="troco_para_quanto">Troco para quanto</string>
    <string name="pronto">Pronto</string>
    <string name="nome_do_mercado">Nome do Mercado</string>
    <string name="imagem_do_estabelecimento">Imagem do estabelecimento</string>
    <string name="indisponivel">INDISPONÌVEL</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="tirar_1_deste_produto_do_carrinho">Tirar 1 deste produto do carrinho</string>
    <string name="adicionar_1_deste_produto_ao_carrinho">Adicionar 1 deste produto ao carrinho</string>
    <string name="remover_do_carrinho">remover do carrinho</string>
    <string name="_1">1</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="continuar_comprando">Continuar comprando</string>
    <string name="entre_em_contato_comigo">Entre em contato comigo</string>
    <string name="cancele_item">Cancele o item</string>
    <string name="próxima">próxima</string>
    <string name="anterior">anterior</string>
    <string name="utilidade_domestica">Utilidade Doméstica</string>
    <string name="isso_e_tudo">Isso é tudo :)</string>
    <string name="sem_conex_o">Sem Conexão</string>
    <string name="fale_conosco">Fale conosco</string>
    <string name="alerta_forma_de_pagamento_nao_selecionada">Alerta: Forma de pagamento não selecionada</string>
    <string name="alerta_voc_nao_escolheu_o_que_fazer_na_falta_de_um_item">Alerta: Você não escolheu o que fazer na falta de um item</string>
    <string name="alerta_algum_produto_possui_pendencia">Alerta: Algum produto possui pendência</string>
    <string name="alerta_horario_de_entrega_nao_selecionado">Alerta: Horario de entrega não selecionado</string>
    <string name="alerta_endereco_nao_selecionado">Alerta: Endereço não selecionado</string>
    <string name="enviar_email">Enviar e-mail</string>
    <string name="avaliar_shelf">Avaliar Shelf</string>
    <string name="escolha_um_assunto">Escolha um assunto</string>
    <string name="ENTRANDO">ENTRANDO</string>
    <string name="saber_mais">SABER MAIS</string>
    <string name="fechar">fechar</string>
    <string name="noticias">Notícias</string>
    <string name="ja_criou_a_sua_conta_no_shelf">Já criou a sua conta no Shelf?</string>
    <string name="nao_tenho_uma_conta">Não tenho uma conta</string>
    <string name="ja_tenho_uma_conta">Já tenho uma conta</string>
</resources>