
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fl_verificar_email"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifique_o_seu_e_mail"
            android:layout_gravity="center"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/tv_aviso_verifique_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:textColor="@color/cinza_escuro"/>

        <TextView
            android:id="@+id/tv_aviso_aguarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="25dp"
            android:text="@string/aguarde_alguns_instantes_para_enviar_outro_email"
            android:layout_margin="15dp"
            android:visibility="invisible" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reenviar_link"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/reenviar_link"
                android:textColor="@color/cinza_escuro"
                android:layout_toStartOf="@+id/btn_ok"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:alpha="0.9"
        android:visibility="gone"
        android:focusable="true">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/spinner"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>