
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fl_aviso"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produtos_em_falta"
            android:layout_gravity="center"
            android:textSize="23sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/momentos_antes_de_finalizarmos_sua_compra_estes_produtos_foram_adquiridos_por_outros_usuarios"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="13sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_produtos_falhos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>