

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/fl_troco"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troco_para_quanto"
            android:layout_gravity="center"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/cinza_escuro"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/li_troco"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/cinza_escuro"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:errorEnabled="true"
            app:prefixText="R$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_troco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/troco_para_quanto"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textColor="@color/cinza_escuro"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sem_troco"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_toStartOf="@id/btn_pronto"
                android:layout_marginTop="20dp"
                android:text="@string/sem_troco"
                android:textColor="@color/cinza_escuro"
                android:layout_marginEnd="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pronto"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="@string/pronto"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:alpha="0.9"
        android:visibility="gone"
        android:focusable="true">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/spinner"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>